package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedChannel;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "channel")
public class Channel extends GeneratedChannel {
}
