package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedVideo;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "video")
public class Video extends GeneratedVideo {
}
