@startuml
skinparam linetype ortho
skinparam nodesep 140
skinparam ranksep 110
skinparam roundCorner 5
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor White
    BorderColor #2D3E50
    ArrowColor #2D3E50
    FontSize 12
}

title Domain Model – YouTube Scenario\nVideos, Channels, Comments, Likes, Reports, and Moderation

package "Identity & Users" {
    class User {
        id: String
        username: String
        registrationDate: Date
    }

    class Creator
    class Moderator
}

package "Channels & Content" {

    class Channel {
        id: String
        name: String
        description: String
        creationDate: Date
    }

    class Content {
        id: String
        creationDate: Date
        status: ACTIVE | FLAGGED | REMOVED | UNDER_REVIEW
    }

    class Video {
        title: String
        description: String
        uploadDate: Date
        duration: Integer
        commentStatus: ENABLED | DISABLED
    }

    class Comment {
        text: String
    }
}

package "Feedback & Moderation" {

    class Like {
        id: String
        value: LIKE | DISLIKE
        timestamp: Date
    }

    class LikeHistory {
        id: String
        action: LIKE | DISLIKE | REMOVED
        timestamp: Date
    }

    class Subscription {
        id: String
        date: Date
    }

    class Report {
        id: String
        reason: String
        status: PENDING | REVIEWED | REMOVED
        timestamp: Date
    }

    class VideoModerationCheck {
        id: String
        type: COPYRIGHT | CONTENT | SPAM
        result: APPROVED | FLAGGED | BLOCKED
        timestamp: Date
    }

    class CommentModerationCheck {
        id: String
        type: SPAM | TOXICITY | BLOCKED_WORD
        result: APPROVED | FLAGGED | HIDDEN
        timestamp: Date
    }

    class CommentSettingsChange {
        id: String
        newStatus: ENABLED | DISABLED
        timestamp: Date
    }

    class ChannelPermissionPolicy {
        id: String
        action: COMMENT | LIVE_CHAT | UPLOAD | MODERATE
        allowedFor: EVERYONE | SUBSCRIBERS | MEMBERS | MODERATORS
    }

    class SortingPolicy {
        id: String
        criterion: DATE | VALUE | RELEVANCE
        direction: ASC | DESC
    }

    class ContentValidationRule {
        id: String
        target: VIDEO | COMMENT
        policyType: COPYRIGHT | COMMUNITY_GUIDELINES | SPAM
        severity: WARNING | STRIKE | REMOVAL
    }
}

' hidden layout helpers
User -[hidden]right- Channel
Channel -[hidden]right- Like
Subscription -[hidden]down- Report

' inheritance
User <|-- Creator
User <|-- Moderator
Content <|-- Video
Content <|-- Comment

' channels
Creator "1" -down-> "*" Channel : owns >
Channel "1" -down-> "*" Video : contains >
Video "*" -up-> "1" Channel : on
Channel "1" -right-> "*" ChannelPermissionPolicy : policy >
Channel "1" -right-> "*" SortingPolicy : sorting >
SortingPolicy "*" -left-> "1" Content : orders >
Creator "1" --> "*" ChannelPermissionPolicy : configures

' comments
Video "1" -right-> "*" Comment : has >
Comment "*" -left-> "1" Video : on
Comment "0..1" -down-> "*" Comment : replies to
Comment "*" -up-> "1" User : author
Video "1" --> "*" ContentValidationRule : validated by
Comment "1" --> "*" ContentValidationRule : validated by

' moderators
Channel "*" -right- "*" Moderator : moderated by

' likes (para video e comment)
User "1" -right-> "*" Like : gives >
Like "*" -left-> "1" Content : on

' histórico de likes
User "1" -right-> "*" LikeHistory : performs >
LikeHistory "*" -left-> "1" Content : on >

' subscriptions
User "1" -down-> "*" Subscription : has >
Subscription "*" -up-> "1" Channel : to

' reports
User "1" -down-> "*" Report : submits >
Report "*" -left-> "1" Content : targets
Report "0..1" -right-> "1" Moderator : reviewed by

' automated moderation
Video "1" -right-> "*" VideoModerationCheck : checked by >
Comment "1" -right-> "*" CommentModerationCheck : checked by >
Moderator "0..1" --> "*" ContentValidationRule : reviewed by

' histórico de alterações de status de comentários
Moderator "1" -down-> "*" CommentSettingsChange : performs >
CommentSettingsChange "*" -left-> "1" Video : on >

@enduml